Add a route with a parameter

--- a/styles.styl
+++ b/styles.styl
@@ -244,6 +244,9 @@ input:-ms-input-placeholder
         font-size 2em
         margin-bottom 8px
         trans()
+        a
+          color inherit
+          text-decoration none
         input
             margin-right 10px
         &.checked
